feat: Complete Phase 3 - Admin Panel, RBAC, and Production Infrastructure
- Created admin dashboard components:
  * admin-layout.tsx: Header, nav, stats cards, actions
  * achievement-verify.tsx: List, filter, detail modal, approve/reject
  * sales-dashboard.tsx: Overview, reservations, purchases, daily chart, refund
  * user-management.tsx: Role management, ban/unban, permissions

- Implemented admin authorization:
  * admin-auth.ts: RBAC with 3 tiers, permission checks, role cache
  * Role hierarchy: user < moderator < admin
  * 15+ permission functions for granular control

- Added admin API endpoints:
  * /api/admin/users - List users
  * /api/admin/user-role - Update role
  * /api/admin/user-ban - Ban/unban users

- Created admin page routes:
  * /admin - Dashboard with metrics
  * /admin/achievements - Achievement verification
  * /admin/sales - Sales analytics
  * /admin/users - User management

- Included documentation:
  * PHASE_3_COMPLETE.md: Full architecture and feature overview

Build Status:  Compiled successfully (0 errors, 28 routes)
Total Code Added Phase 3: 4,850+ lines across 19 files

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@tailwindcss/postcss": "^4.1.18",
     "@tanstack/react-table": "^8.21.2",
     "@types/qrcode": "^1.5.6",
+    "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -66,6 +67,7 @@
     "react-use": "^17.6.0",
     "reaflow": "^5.2.1",
     "recharts": "^3.6.0",
+    "stripe": "^17.7.0",
     "suncalc": "^1.9.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
