--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
     "@tailwindcss/postcss": "^4.1.18",
     "@tanstack/react-table": "^8.21.2",
     "@types/qrcode": "^1.5.6",
+    "@vercel/analytics": "^1.6.1",
+    "@vercel/speed-insights": "^1.3.1",
+    "@zxing/library": "^0.21.3",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -56,6 +59,7 @@
     "next-themes": "^0.4.6",
     "patch-package": "^8.0.0",
     "qrcode": "^1.5.4",
+    "qrcode.react": "^4.2.0",
     "react": "^19.2.3",
     "react-arborist": "^3.4.0",
     "react-day-picker": "^9.13.0",
@@ -63,6 +67,7 @@
     "react-hook-form": "^7.68.0",
     "react-hotkeys-hook": "^5.2.1",
     "react-icons": "^5.5.0",
+    "react-is": "^19.2.3",
     "react-rnd": "^10.4.14",
     "react-use": "^17.6.0",
     "reaflow": "^5.2.1",
