Vercel Pro & www.tv25.org Migration
- Updated vercel.json: NEXT_PUBLIC_APP_URL  https://www.tv25.org
- Created .env.local with Supabase credentials (kept local, not in git)
- Anon Key: sb_publishable_pOysGok_b2eHkSxtm_yKQA_mEdVGfBi
- Service Role: sb_secret_YFd4MDCZ6IRAC5-GmQk7Pg_Y1bSto94
- Domain: www.tv25.org (custom domain on Vercel Pro)

 .env.local is intentionally in .gitignore for security
 Environment variables should be set in Vercel Dashboard

--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
   "framework": "nextjs",
   "regions": ["iad1"],
   "env": {
-    "NEXT_PUBLIC_APP_URL": "https://tv25.org"
+    "NEXT_PUBLIC_APP_URL": "https://www.tv25.org"
   },
   "functions": {
     "app/api/**/*.ts": {
