feat: Complete branding migration CanvasFlow  tv25 + sidebar state fix + performance optimizations
- Replaced all user-facing CanvasFlow references with tv25 (manifest, layout, loading, UI messages)
- Updated storage keys: canvasflow-storage  tv25-storage, canvasflow-sync  tv25-sync
- Updated QR codes & URLs: canvasflow:remote  tv25:remote, canvasflow.app  tv25.app
- Updated blockchain secrets: canvasflow-secret  tv25-secret
- Updated database keys: canvasflow_data_v2  tv25_data_v2, canvasflow_items  tv25_items
- Fixed library-canvas sidebar state transitions (setActiveTab now properly closes sidebar when navigating away from library)
- Added performance optimizations in canvas.tsx:
  * Added useMemo for responsiveGridSize, scaledWrapperStyle, canvasStyle, patternStyle, webglBackgroundClass
  * Added useCallback for event handlers (handleDragOver, handleDrop, handleDeleteSelected)
  * Added useMemo for selectedItems and deletableSelectedItems filtering
- Updated training system, profile widgets, and assistant flow descriptions to use tv25 branding
- Build successful, no TypeScript errors

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "CanvasFlow - Sınırsız Dijital Kanvas",
-  "short_name": "CanvasFlow",
+  "name": "tv25 - Sınırsız Dijital Kanvas",
+  "short_name": "tv25",
   "description": "Fikirlerinizi organize edin, projelerinizi yönetin, yaratıcılığınızı keşfedin.",
   "start_url": "/",
   "scope": "/",
@@ -54,7 +54,7 @@
     {
       "name": "Yeni Tab Aç",
       "short_name": "Yeni Tab",
-      "description": "CanvasFlow'da yeni bir tab açın",
+      "description": "tv25'te yeni bir tab açın",
       "url": "/canvas?action=new-tab",
       "icons": [
         {
