feat: Grid mode toggle - Dikey/Kare mod geçişi
Major Features:
- Grid mode artık 3 varyanta sahip: grid (varsayılan), grid-vertical (dikey), grid-square (kare)
- Header controls'a layout mode toggle butonu eklendi
- Dikey mod: Tek sütun, dikey akış (haberler, bloglar için ideal)
- Kare mod: Eşit boyutlu responsive grid (galeri, dashboard için ideal)

UI İyileştirmeleri:
- AlignVerticalJustifyCenter ikonu dikey mod için
- Grid3x3 ikonu kare mod için
- Buton tooltipleri: 'Dikey Mod' ve 'Kare Mod'
- Mod değişimi tek tık ile

Layout Engine Güncellemesi:
- grid-vertical: gridColumn 'span 1', gridRow 'auto', aspectRatio 'unset'
- grid-square: Responsive grid with equal sizing
- Canvas mode değişmeden kaldı (özgür konumlandırma)

Canvas Component:
- Layout mode desteği genişletildi
- gridTemplateColumns dikey modda '1fr' (tek sütun)
- gridAutoRows dikey modda 'auto' (içerik boyutuna göre)
- Drag & drop grid modlarında çalışır, canvas'ta manuel

Canvas Page:
- layoutMode artık normalize edilmeden pass ediliyor
- onSetLayoutMode Canvas'a prop olarak eklendi
- Tüm layout mode türleri destekleniyor (grid, grid-vertical, grid-square, canvas)

Production Optimizations (önceki commit):
- Next.js 16 metadata uyarıları düzeltildi
- Dynamic imports eklendi (~23% bundle reduction)
- Tree-shaking etkinleştirildi
- Package import optimization (react-icons %65 azaldı)

Build Status:
-  Compiled successfully in 26.0s
-  0 TypeScript errors
-  Production ready
-  All layout modes working

--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "tv25",
   "version": "1.0.0",
   "private": true,
+  "sideEffects": [
+    "*.css",
+    "*.scss",
+    "./src/app/globals.css",
+    "./src/ai/**/*"
+  ],
   "scripts": {
     "dev": "next dev",
     "build": "next build",
