--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
@@ -92,6 +92,8 @@
     "@types/react-dom": "^19.2.3",
     "@types/recharts": "^1.8.29",
     "@types/suncalc": "^1.9.0",
+    "eslint": "^9.14.0",
+    "eslint-config-next": "^16.1.1",
     "genkit-cli": "^1.26.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
