--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^3.0.7",
+    "@ai-sdk/google": "^3.0.5",
+    "@ai-sdk/openai": "^3.0.7",
     "@genkit-ai/google-genai": "^1.26.0",
     "@google/model-viewer": "^4.1.0",
     "@hello-pangea/dnd": "^18.0.1",
@@ -52,6 +55,7 @@
     "@vercel/analytics": "^1.6.1",
     "@vercel/speed-insights": "^1.3.1",
     "@zxing/library": "^0.21.3",
+    "ai": "^6.0.14",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
