build: install typescript in production

--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.172.0",
+    "typescript": "^5.9.3",
     "zod": "^3.23.8",
     "zustand": "^5.0.3"
   },
@@ -100,7 +101,6 @@
     "eslint-config-next": "^16.1.1",
     "genkit-cli": "^1.26.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.18",
-    "typescript": "^5.9.3"
+    "tailwindcss": "^4.1.18"
   }
 }
