--- a/package.json
+++ b/package.json
@@ -86,7 +86,8 @@
     "three": "^0.172.0",
     "ua-parser-js": "^2.0.7",
     "zod": "^4.3.5",
-    "zustand": "^5.0.9"
+    "zustand": "^5.0.9",
+    "typescript": "^5.9.3"
   },
   "devDependencies": {
     "@types/node": "^25.0.5",
@@ -98,7 +99,6 @@
     "eslint-config-next": "^16.1.1",
     "genkit-cli": "^1.27.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.18",
-    "typescript": "^5.9.3"
+    "tailwindcss": "^4.1.18"
   }
 }
