--- a/package.json
+++ b/package.json
@@ -84,10 +84,10 @@
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.172.0",
+    "typescript": "^5.9.3",
     "ua-parser-js": "^2.0.7",
     "zod": "^4.3.5",
-    "zustand": "^5.0.9",
-    "typescript": "^5.9.3"
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@types/node": "^25.0.5",
