feat: Profile canvas, feed, social system with interactive widgets
- Add ProfileFeedService for complete profile/feed CRUD operations
- Add ProfileCanvasComponent with editable bio, cover, social links
- Create 5 widget components: Poll, Quiz, Question, Instruction, Feed
- Add React hooks for profile, feed, interactions, comments, ratings
- Update SQL migration with stored procedures and extended columns
- Add social followers table with RLS policies
- Enable Supabase Realtime for profile/feed/social tables
- Integrate profile canvas into ProfilePanel with view mode switch
- Add cloud storage management system with quota tracking

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,9 +5,10 @@
   "start_url": "/",
   "scope": "/",
   "display": "standalone",
-  "orientation": "portrait-primary",
+  "orientation": "any",
   "theme_color": "#0066cc",
   "background_color": "#ffffff",
+  "display_override": ["fullscreen", "standalone", "minimal-ui"],
   "icons": [
     {
       "src": "/favicon.svg",
