ACTIVATE: All Live Data Structures & Supabase Integration
 Features Activated:
- Messaging systems (direct, groups, calls, meetings)
- Social groups & profiles with slug-based routing
- Cloud storage with cross-device sync
- Scene & presentation system
- Achievement & rewards system
- E-commerce marketplace & inventory tracking
- Trash/recycle bin with recovery
- AI conversation management & toolkit sync
- Advanced profile features (follower system, private accounts)
- Real-time analytics & interaction tracking
- GDPR compliance (data export, deletion, consent)
- Message delivery status tracking
- Sharing system with permissions
- Multi-tab workspace sync
- Social events & notifications

 Infrastructure:
- Supabase real-time subscriptions
- Cloud sync for all data types
- API routes for all services
- Email templates (6 templates)
- Security middleware & RBAC
- Analytics & metrics tracking
- Broadcasting for presentations

 Documentation:
- Email templates setup guide
- Cloud storage quick start
- Analytics implementation
- Subscription system
- Deployment checklist

 All systems ready for production

--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "upload:email": "node scripts/upload-email-templates.mjs",
+    "upload:email:welcome": "node scripts/upload-email-templates.mjs welcome",
+    "upload:email:all": "node scripts/upload-email-templates.mjs all",
+    "open:supabase:email": "node scripts/open-supabase-dashboard.mjs",
+    "send:reminder": "node scripts/send-reminder.mjs"
   },
   "dependencies": {
     "@genkit-ai/google-genai": "^1.27.0",
@@ -78,6 +83,7 @@
     "react-rnd": "^10.5.2",
     "react-use": "^17.6.0",
     "reaflow": "^5.4.1",
+    "resend": "^4.0.0",
     "recharts": "^3.6.0",
     "stripe": "^20.1.2",
     "suncalc": "^1.9.0",
