--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "send:reminder": "node scripts/send-reminder.mjs"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^3.0.17",
+    "@ai-sdk/google": "^3.0.10",
+    "@ai-sdk/openai": "^3.0.13",
     "@genkit-ai/google-genai": "^1.27.0",
     "@google/model-viewer": "^4.1.0",
     "@hello-pangea/dnd": "^18.0.1",
@@ -50,13 +53,14 @@
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@supabase/ssr": "^0.8.0",
-    "@supabase/supabase-js": "^2.90.1",
+    "@supabase/supabase-js": "^2.91.0",
     "@tailwindcss/postcss": "^4.1.18",
     "@tanstack/react-table": "^8.21.3",
     "@types/qrcode": "^1.5.6",
     "@vercel/analytics": "^1.6.1",
     "@vercel/speed-insights": "^1.3.1",
     "@zxing/library": "^0.21.3",
+    "ai": "^6.0.42",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -83,8 +87,8 @@
     "react-rnd": "^10.5.2",
     "react-use": "^17.6.0",
     "reaflow": "^5.4.1",
-    "resend": "^4.0.0",
     "recharts": "^3.6.0",
+    "resend": "^4.0.0",
     "stripe": "^20.1.2",
     "suncalc": "^1.9.0",
     "tailwind-merge": "^3.4.0",
