--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "reaflow": "^5.4.1",
     "recharts": "^3.7.0",
     "resend": "^6.8.0",
+    "sonner": "^2.0.7",
     "stripe": "^20.2.0",
     "suncalc": "^1.9.0",
     "tailwind-merge": "^3.4.0",
